--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -475,7 +475,7 @@ body {
 }
 
 .input-with-action-row {
-  margin-top: 1rem;
+  margin-top: 2rem;
   display: flex;
   align-items: center;
   width: 100%;
